Z-index issue temporarily fixed. Modified language.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 /*----------Top Navbar Specifications----------*/
 
 /*Green bar itself*/
-.navbar {
+nav {
     overflow: hidden;
     background-color: #11c482;
     position: fixed;
@@ -16,7 +16,7 @@ body {
 }
 
 /*Name on the navbar*/
-.navbar .name-field {
+nav .name-field {
     margin-left: 40px;
     float: left;
     color: #0a509b;
@@ -24,29 +24,29 @@ body {
     font-family: 'Inconsolata', monospace;
     font-weight: bold;
     text-align: center;
-    font-size: 24;
+    font-size: 24px;
     padding: 18px;
 }
 
 /*Enclosing class for group of all links on navbar*/
-.navbar .links {    
+nav .links {    
     margin-right: 40px;
 }
 
 /*Individual text for links*/
-.navbar .links a {
+nav .links a {
     float: right;
     color: #ba4c0d;
     text-decoration: none;
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     text-align: center;
-    font-size: 18;
+    font-size: 18px;
     padding: 18px 28px;
 }
 
 /*Hovering over a link on the navbar*/
-.navbar a:hover {
+nav a:hover {
     background: #e7ea4d;
     color: #000000;
     transition: 1.5s;
@@ -78,27 +78,27 @@ body {
 
 /*Narrow smartphone screens*/
 @media screen and (max-width: 399px) {
-    #main{
+    main {
         margin-top: 175px;
     }
 }
 
 /*Wide smartphone screens*/
 @media screen and (min-width: 400px) and (max-width: 499px) {
-    #main{
+    main {
         margin-top: 115px;
     }
 }
 
 /*Tablet and laptop screens*/
 @media screen and (min-width: 501px) {
-    #main {
+    main {
         margin-top: 50px;
     }
 }
 
 /*Apply to all devices*/
-#main {
+main {
     padding: 16px;
     height: 2500px;
 }
@@ -108,7 +108,7 @@ body {
 /*--------Specifications for the colored boxes that scroll--------*/
 
 /*Yellow colored box*/
-#box-light {
+#box-light, #box-light-bullets {
     background: #ffc000;
 }
 
@@ -125,16 +125,20 @@ body {
 }
 
 /*Apply to non-sub boxes*/
-#box-light, #box-dark{
+#box-light, #box-dark, #box-light-bullets {
     margin: 6% 7%;
     padding: 10px ;
 }
 
 /*Apply to all boxes*/
-#box-light, #box-dark, #sub-box-dark{
+#box-light, #box-light-bullets, #box-dark, #sub-box-dark{
     overflow: auto;
     border-radius: 18px;
     position: relative;
+}
+
+/*Minus 5 z-index for bullet points*/
+#box-light-bullets{
     z-index: -5;
 }
 
@@ -146,17 +150,17 @@ body {
 @media screen and (max-width: 500px) {
     /*Paragraph primary title (both colors)*/
     #p-title-black, #p-title-white {
-        font-size: 18;
+        font-size: 18px;
     }
 
     /*Paragraph secondary title (both colors)*/
     #p-title2-black, #p-title2-white {
-        font-size: 16;
+        font-size: 16px;
     }
 
     /*Paragraph body (both colors, indented or unindented)*/
     #p-unindent-black, #p-indent-black, #p-unindent-white, #p-indent-white {
-        font-size: 18;        
+        font-size: 18px;        
     }
 }
 
@@ -164,17 +168,17 @@ body {
 @media screen and (min-width: 501px) {
     /*Paragraph primary title (both colors)*/
     #p-title-black, #p-title-white {
-        font-size: 42;
+        font-size: 42px;
     }
 
     /*Paragraph secondary title (both colors)*/
     #p-title2-black, #p-title2-white {
-        font-size: 36;
+        font-size: 36px;
     }
 
     /*Paragraph body (both colors, indented or unindented)*/
     #p-unindent-black, #p-indent-black, #p-unindent-white, #p-indent-white {
-        font-size: 28;        
+        font-size: 28px;        
     }
 }
 
@@ -233,6 +237,11 @@ body {
     padding: 9px 3%;
 }
 
+/*Make link text white in paragraphs*/
+p a {
+    color: #ffffff;
+}
+
 /*----------------*/
 
 /*------Specifications for subway-like icon indicators------*/
@@ -240,14 +249,14 @@ body {
 /*Smartphone screen-specific*/
 @media screen and (max-width: 500px) {
     #icon-text-black, #icon-text-white, #u-circle-text {
-        font-size: 11;
+        font-size: 11px;
     }
 }
 
 /*Tablet and laptop screen-specific*/
 @media screen and (min-width: 501px) {
     #icon-text-black, #icon-text-white, #u-circle-text {
-        font-size: 16;
+        font-size: 16px;
     }
 }
 
@@ -316,7 +325,7 @@ body {
     color: #ffffff;
     text-decoration: none;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16;
+    font-size: 16px;
     text-align: center;
     padding: 14px 18px 6px 2px;
     float: left;
